I made Fucking Dummy Layout simply. This can't work!!

--- a/app/src/main/res/layout/post_main.xml
+++ b/app/src/main/res/layout/post_main.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#FFFFFF">
 
     <TextView
         android:layout_width="wrap_content"
